@@ -1,4 +1,12 @@
 
+2005-02-27  Volker Stroebel <volker@planetpenguin.de>
+	* src/ppgltk/audio/audio_data.cpp src/hier_util.cpp
+	  src/phys_sim.cpp src/ppgltk/textarea.cpp
+	  src/credis.cpp src/hud.cpp src/quadtree.cpp
+	  src/race_select.cpp src/ppgltk/listbox.cpp
+	  src/callbacks.cpp src/ppgltk/label.cpp
+	fixed compilation with --enable-debug
+	
 
 2005-02-26  Volker Stroebel <volker@planetpenguin.de>
 	* src/phys_sim.cpp src/quadtree.* src/string_util.cpp 
